--- a/_config.yml
+++ b/_config.yml
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "Alireza1044"
+  linkedin         : "alireza-moradi99"
   orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : "8783668/alireza-moradi"
   steam            :
   tumblr           :
-  twitter          : "Alireza1045"
+  twitter          : "_AlirezaMoradi_"
   vine             :
   weibo            :
   xing             :
