--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Alireza Moradi"
 title_separator          : "-"
 name                     : &name "Alireza Moradi"
 description              : &description "personal description"
-url                      : "https://moradi.me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://alirezamoradi.me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alireza1044/alireza1044.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
