--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "custom" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :  "G-X5EDWR5T7Q"
+    tracking_id          :  "UA-197363568-1"
 
 
 # Site Author
