--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   university       : "Iran University of<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Science and Technology"
   pubmed           : 
   googlescholar    : 
-  email            : "alirezamoradi1044@gmail.com"
+  email            : "alireza_moradi@sfu.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
