--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Alireza Moradi"
   avatar           : "profile.png"
-  bio              : "Undergraduate Computer Engineering Student"
+  bio              : "Computer Science Student"
   location         : "Tehran, Iran"
   university       : "Iran University of<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Science and Technology"
   pubmed           : 
