--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Computer Science Student"
   location         : "Tehran, Iran"
-  university       : "Iran University of<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Science and Technology"
+  university       : "Simon Fraser University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=F9_bOFAAAAAJ&hl=en"
   email            : "alireza_moradi@sfu.ca"
