--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alireza Moradi"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Computer Science Student"
   location         : "Tehran, Iran"
   university       : "Simon Fraser University"
