--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Alireza Moradi"
   avatar           : "profile.jpeg"
   bio              : "Computer Science Student"
-  location         : "Tehran, Iran"
+  location         : "Burnaby, BC, Canada"
   university       : "Simon Fraser University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=F9_bOFAAAAAJ&hl=en"
